# text-classifier

./: CMakeLists.txt
src/: CMakeLists.txt  IntentRecognizer.cpp  IntentRecognizer.h  Rule.cpp  Rule.h  Tokenizer.cpp  Tokenizer.h  text-classifier.cpp
tst/: CMakeLists.txt  IntentRecognizer-test.cpp  Parser-test.cpp  Rule-test.cpp
